# brighter-bookings-ms

./: .dockerignore  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: cache.py  crud.py  deps.py  i18n.py  models.py  pricing_client.py  schemas.py  scopes.py  settings.py
app/routers/: booking.py
migrations/aerich_history/: 14_20260428101313_add_num_guests_to_booking.py  18_20260429111415_gap_filling.py  6_20260410010045_None.py
migrations/models/: 0001_initial.py  14_20260428101313_add_num_guests_to_booking.py  15_20260428112725_add_guest_country_to_booking.py  5_20260409004550_None.py  6_20260409004614_datetime_to_date.py  7_20260410010156_add_guest_fields.py
tests/: conftest.py  factories.py  test_bookings.py  test_deps.py  test_gap_filler.py  test_i18n.py  test_scopes.py  test_status_notifications.py
tests/integration/: test_cache.py
